Improved fixture card spacing and code tidy-up.

--- a/src/components/addFixture.module.scss
+++ b/src/components/addFixture.module.scss
@@ -1,7 +1,3 @@
-.wrapper {
-    //max-width: 500px;
-}
-
 .controlSpacing {
     margin: 10px 0px 10px 0px;
 }
@@ -25,6 +21,17 @@ span {
 .button, .button:hover, .button:active, .button:focus {
     background-color: #37003c !important;
     border-color: #37003c !important;
+    outline-style: none !important;
+    box-shadow: none !important;
+    border-color: transparent !important;
+}
+
+.btnConfirm, .btnConfirm:hover, .btnConfirm:active, .btnConfirm:focus {
+    float: right;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    background-color: #ff2882 !important;
+    border-color: #ff2882 !important;
     outline-style: none !important;
     box-shadow: none !important;
     border-color: transparent !important;
