--- a/src/components/fixtureCard.module.scss
+++ b/src/components/fixtureCard.module.scss
@@ -11,7 +11,6 @@
 
 .teams {
     display: inline-flex;
-    margin-left: 25%;
 }
 .teams .teamsText {
     margin-right: 10px;
@@ -42,11 +41,6 @@
     border-color: transparent !important;
 }
 
-.btnConfirm, .btnConfirm:hover, .btnConfirm:active, .btnConfirm:focus {
-    margin-left: 50px;
-    background-color: #ff2882 !important;
-    border-color: #ff2882 !important;
-    outline-style: none !important;
-    box-shadow: none !important;
-    border-color: transparent !important;
+.dropdownFull {
+    margin-left: auto;
 }
